fix overflow x for mobile

--- a/_sass/books/_ficciones.scss
+++ b/_sass/books/_ficciones.scss
@@ -2,7 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Diplomata+SC);
 
 #second {
-  background-color: gold;
+  background: gold;
 }
 
 #ficciones {
