--- a/_sass/books/_layout.scss
+++ b/_sass/books/_layout.scss
@@ -1,7 +1,8 @@
 .container {
-  background-size: cover;
   height: 100vh;
+  overflow-x: hidden;
   position: relative;
+  z-index: -1;
 }
 
 .book {
