--- a/_sass/books/_underground.scss
+++ b/_sass/books/_underground.scss
@@ -18,7 +18,7 @@
 
 
 #first {
-  background-color: crimson;
+  background: crimson;
 }
 #underground {
   background: beige;
